--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -9,3 +9,31 @@ body {
 nav a {
   color: black !important;
 }
+
+.App {
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  min-height: 100%;
+  min-height: 100vh;
+  margin: 0 auto;
+  > header,
+  > main,
+  > footer {
+    width: 100%;
+    padding: 1rem;
+    margin: 0.5rem 1rem;
+    text-align: center;
+  }
+  > header {
+    display: block;
+    text-transform: uppercase;
+  }
+  > main {
+    flex: 1 1 auto;
+  }
+}
