--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,46 @@
+/* GENERAL STYLES */
+
 * {
     margin: 0;
     padding: 0;
+    font-family: monaco, Consolas, "Lucida Console", monospace;
+}
+
+a:link, a:visited, a:hover, a:focus, a:active {
+    color: #000000;
+}
+
+/* UTILITIES */
+
+.parent {
+    height: 100vh;
+    position: relative;
+}
+
+.child {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.content {
+    margin-bottom: 15vh;
+}
+
+.footer ul {
+    list-style-type: none;
+}
+
+.nav li {
+    display: inline;
+}
+
+.nav {
+    margin-bottom: 2.5vh;
+}
+
+.email {
+    margin-bottom: .5vh;
 }
