--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ a:hover,
 a:focus,
 a:active {
   color: #000000;
+  text-decoration: none;
 }
 
 /* UTILITIES */
@@ -23,10 +24,18 @@ a:active {
 
 .content {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+}
+
+.bottom {
+  position: fixed;
+  text-align: center;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .footer ul {
@@ -39,6 +48,7 @@ a:active {
 
 .nav li {
   display: inline;
+  text-decoration: none;
 }
 
 .nav {
