--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,13 +18,17 @@ a:active {
 /* UTILITIES */
 
 .app {
+  display: flex;
+  flex-direction: column;
   height: 100vh;
   width: 100vw;
 }
 
-// .header {
-//   margin: 0 auto;
-// }
+.header {
+  margin-top: 5vh;
+  justify-content: center;
+  align-items: center;
+}
 
 .nav li {
   display: inline;
@@ -33,43 +37,33 @@ a:active {
 
 .content {
   text-align: center;
+  flex: 1 0 auto;
+  margin-bottom: 2vh;
 }
 
-// .content {
-//   position: absolute;
-//   top: 40%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-//   text-align: center;
+// .home-content {
 // }
 
-// .textWall {
-//   text-align: justify;
-//   justify-content: center;
-//   line-height: 2em;
-// }
+.textWall {
+  text-align: justify;
+  justify-content: center;
+  line-height: 2em;
+}
 
 .tagline {
   font-style: italic;
 }
 
-// .bottom {
-//   position: absolute;
-//   bottom: 0;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-// }
+.bottom {
+  flex-shrink: 0;
+}
 
 .footer li {
   display: inline;
   margin: 10px;
 }
 
-// .email {
-//   margin-bottom: 0.5vh;
-// }
-
-// .logoStyle {
-//   width: 20px;
-//   height: 20px;
-// }
+.post {
+  width: "18rem";
+  margin-bottom: 3vh;
+}
