--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,11 +21,11 @@ a:active {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  width: 100vw;
+  text-align: center;
 }
 
 .header {
-  margin-top: 5vh;
+  margin-top: 2vh;
   justify-content: center;
   align-items: center;
 }
@@ -41,13 +41,12 @@ a:active {
   margin-bottom: 2vh;
 }
 
-// .home-content {
-// }
-
 .textWall {
-  text-align: justify;
+  text-align: center;
   justify-content: center;
   line-height: 2em;
+  margin-left: 10vw;
+  margin-right: 10vw;
 }
 
 .tagline {
