--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -30,11 +30,6 @@ a:active {
   align-items: center;
 }
 
-.nav li {
-  display: inline;
-  margin: 10px;
-}
-
 .content {
   text-align: center;
   flex: 1 0 auto;
@@ -63,6 +58,31 @@ a:active {
 }
 
 .entity-card {
-  width: 16rem;
-  margin-bottom: 3vh;
+  width: 20rem;
+}
+
+/* MEDIA QUERIES */
+// Extra small devices (i.e. portrait phones)
+@media (max-width: 575.98px) {
+  .header {
+    justify-content: left;
+  }
+
+  .entity-card {
+    width: 100%;
+  }
+}
+
+// Small devices (i.e. landscape phones)
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .header {
+    justify-content: left;
+  }
+}
+
+// Medium devices (i.e. tablets)
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .header {
+    justify-content: left;
+  }
 }
