Fixed hamburger nav functionality/styling

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,4 @@
 /* GENERAL STYLES */
-
 * {
   margin: 0;
   padding: 0;
@@ -16,7 +15,6 @@ a:active {
 }
 
 /* UTILITIES */
-
 .app {
   display: flex;
   flex-direction: column;
@@ -83,9 +81,28 @@ a:active {
   .entity-card {
     width: 100%;
   }
+
+  .text-wall {
+    font-size: 0.9em;
+  }
 }
 
 // Small devices (i.e. landscape phones)
+@media (max-width: 769px) {
+  #basic-navbar-nav {
+    z-index: 10;
+    color: white;
+    background: #ededed;
+    position: absolute;
+    text-align: left;
+    padding: 10px;
+    left: 15px;
+    top: 60px;
+    width: 85vw;
+    border-radius: 10px;
+  }
+}
+
 @media (min-width: 576px) and (max-width: 767.98px) {
   .header {
     justify-content: left;
