--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,8 +10,7 @@ a:visited,
 a:hover,
 a:focus,
 a:active {
-  color: #000000;
-  text-decoration: none;
+  color: #55abff;
 }
 
 /* UTILITIES */
@@ -62,13 +61,22 @@ a:active {
   flex-shrink: 0;
 }
 
+.music-list {
+  text-decoration: none;
+  list-style-type: none;
+}
+
 .footer li {
   display: inline;
   margin: 10px;
 }
 
+.footer a {
+  color: #000000;
+}
+
 .entity-card {
-  width: 20rem;
+  width: 40rem;
 }
 
 /* MEDIA QUERIES */
@@ -87,8 +95,45 @@ a:active {
   }
 }
 
+@media (max-width: 662.98px) {
+  #basic-navbar-nav {
+    width: 80vw;
+  }
+}
+
 // Small devices (i.e. landscape phones)
-@media (max-width: 769px) {
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .header {
+    justify-content: left;
+  }
+}
+
+@media (min-width: 663px) and (max-width: 767.98px) {
+  #basic-navbar-nav {
+    width: 70vw;
+  }
+}
+
+// Medium devices (i.e. tablets)
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .header {
+    justify-content: left;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 904.98px) {
+  #basic-navbar-nav {
+    width: 75vw;
+  }
+}
+
+@media (min-width: 905px) and (max-width: 991.98px) {
+  #basic-navbar-nav {
+    width: 70vw;
+  }
+}
+
+@media (max-width: 991.98px) {
   #basic-navbar-nav {
     z-index: 10;
     color: white;
@@ -98,20 +143,6 @@ a:active {
     padding: 10px;
     left: 15px;
     top: 60px;
-    width: 85vw;
     border-radius: 10px;
-  }
-}
-
-@media (min-width: 576px) and (max-width: 767.98px) {
-  .header {
-    justify-content: left;
-  }
-}
-
-// Medium devices (i.e. tablets)
-@media (min-width: 768px) and (max-width: 991.98px) {
-  .header {
-    justify-content: left;
   }
 }
