--- a/styles.css
+++ b/styles.css
@@ -2,5 +2,22 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Trebuchet MS";
+  font-family: "Palatino";
+}
+
+.text-container {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  padding: 6em 10em;
+  line-height: 1.75em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .text-container {
+    padding: 6em 2em;
+  }
 }
