--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,6 +47,25 @@ h6 {
   overflow-wrap: break-word;
 }
 
+.one-hundred-vwh {
+  width: 100vw;
+  height: 100vh;
+}
+
+.center-screen {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.column-gap-20 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 .text-container {
   width: 100%;
   height: 100%;
