--- a/styles.css
+++ b/styles.css
@@ -47,9 +47,9 @@ h6 {
   overflow-wrap: break-word;
 }
 
-.one-hundred-vwh {
-  width: 100vw;
-  height: 100vh;
+.main-container {
+  width: 100%;
+  height: 100%;
 }
 
 .center-screen {
@@ -75,6 +75,12 @@ h6 {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .text-container {
+    padding: 6em 2em;
+  }
 }
 
 @media screen and (max-width: 768px) {
