--- a/src/photos/styles.css
+++ b/src/photos/styles.css
@@ -1,6 +1,7 @@
 main {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-auto-rows: 200px;
   grid-column-gap: 20px;
   grid-row-gap: 20px;
 }
@@ -9,4 +10,18 @@ img {
   object-fit: contain;
   border: 2px solid black;
   border-radius: 4px;
+}
+
+@media only screen and (max-width: 460px) {
+  main {
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    grid-auto-rows: 120px;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+  }
+
+  img {
+    width: 120px;
+    height: 120px;
+  }
 }
